[package]
name = "krik"
version = "0.1.15"
edition = "2021"
rust-version = "1.70"
authors = ["Mirko Caserta", "Krik Contributors"]
description = "A fast static site generator written in Rust with internationalization, theming, and modern web features"
documentation = "https://docs.rs/krik"
readme = "README.md"
homepage = "https://github.com/mcaserta/krik/"
repository = "https://github.com/mcaserta/krik/"
license = "MIT"
keywords = ["static-site", "generator", "markdown", "blog", "website"]
categories = ["command-line-utilities", "web-programming"]
exclude = [
    "_site/*",
    "target/*",
    ".git/*",
    "*.png",
    "CLAUDE.md"
]

[[bin]]
name = "kk"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.12"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20"
toml = "0.8"
regex = "1.10"
# Resolve external tool paths (pandoc, typst)
which = "6"
# Server dependencies
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
notify = "6.0"
serde_json = "1.0"
futures-util = "0.3"
local-ip-address = "0.6"
# Init command dependencies
include_dir = "0.7"
# Path utilities for relative URL calculation
pathdiff = "0.2"
# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
once_cell = "1"
