[package]
name = "krik"
version = "0.1.27"
edition = "2021"
rust-version = "1.70"
authors = ["Mirko Caserta", "Krik Contributors"]
description = "A fast static site generator written in Rust with internationalization, theming, and modern web features"
documentation = "https://docs.rs/krik"
readme = "README.md"
homepage = "https://github.com/mcaserta/krik/"
repository = "https://github.com/mcaserta/krik/"
license = "MIT"
keywords = ["static-site", "generator", "markdown", "blog", "website"]
categories = ["command-line-utilities", "web-programming"]
exclude = [
    "_site/*",
    "target/*",
    ".claude/*",
    ".cursor/*",
    ".git/*",
    ".github/*",
    ".idea/*",
    ".vscode/*",
    ".DS_Store",
    "renovate.json",
    "CLAUDE.md"
]

[[bin]]
name = "kk"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.13.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20"
toml = "0.9.5"
regex = "1.10"
# Resolve external tool paths (pandoc, typst)
which = "8.0.0"
# Server dependencies
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.1", features = ["server", "websocket"] }
notify = "8.2.0"
serde_json = "1.0"
futures-util = "0.3"
local-ip-address = "0.6"
# Init command dependencies
include_dir = "0.7"
# Path utilities for relative URL calculation
pathdiff = "0.2"
# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
rayon = "1.10"
thiserror = "2.0.12"
once_cell = "1"
# HTTP client for link checking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Use rustls for TLS instead of native TLS (helps with cross-compilation)
rustls = ["reqwest/rustls-tls"]
# Vendor OpenSSL for static linking (alternative approach)
vendored-openssl = ["reqwest/native-tls-vendored"]
